fix(navbar): make logo left-aligned

--- a/src/sections/navbar/navbar.scss
+++ b/src/sections/navbar/navbar.scss
@@ -8,6 +8,7 @@
     .brand {
         img {
             height: 60px;
+            width: auto;
             padding: 8px 0;
         }
     }
